tests/sema/fail/v8_fail_str_struct.ep
# COMPILE_FAIL: str expected str, integer, bool, or u8[], got Val

struct Val {
    val: i64
}

fun main(): i64 {
    println(str(new Val { val: 3 }))
    return 0
}
